Split out UI tests from unit tests