@@ -37,6 +37,7 @@
 	<properties>
 		<curve.version>0.2-SNAPSHOT</curve.version>
 		<jep.version>2.24</jep.version>
+		<xenon.version>1.5-SNAPSHOT</xenon.version>
 		<zarra.version>0.5-SNAPSHOT</zarra.version>
 		<images-folder>target/main/images</images-folder>
 	</properties>
@@ -70,6 +71,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>openjfx-monocle</artifactId>
+			<version>${monocle.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<!-- Exclude the openjfx libraries, they are already available -->
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -80,21 +95,21 @@
 				<configuration>
 					<source>14</source>
 					<target>14</target>
-					<release>14</release>
 				</configuration>
-				<executions>
-					<execution>
-						<id>default-testCompile</id>
-						<configuration>
-							<compilerArgs>
-								<!-- This whole thing is due to a split module problem -->
-								<!-- Cannot find the jar because it's in the maven repo -->
-								<arg>-J--patch-module com.avereon.xenon=xenon-${xenon.version}-tests.jar</arg>
-							</compilerArgs>
-						</configuration>
-					</execution>
-				</executions>
+				<!--				<executions>-->
+				<!--					<execution>-->
+				<!--						<id>default-testCompile</id>-->
+				<!--						<configuration>-->
+				<!--							<release>14</release>-->
+				<!--							<compilerArgs>-->
+				<!--								<arg>&#45;&#45;patch-module</arg>-->
+				<!--								<arg>com.avereon.xenon=${settings.localRepository}/com/avereon/xenon/${xenon.version}/xenon-${xenon.version}-tests.jar</arg>-->
+				<!--							</compilerArgs>-->
+				<!--						</configuration>-->
+				<!--					</execution>-->
+				<!--				</executions>-->
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -118,6 +133,63 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>testui</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<!-- Version comes from parent -->
+						<executions>
+							<execution>
+								<id>testui</id>
+								<goals>
+									<goal>integration-test</goal>
+									<goal>verify</goal>
+								</goals>
+								<configuration>
+									<forkCount>1</forkCount>
+									<reuseForks>false</reuseForks>
+									<runOrder>alphabetical</runOrder>
+									<argLine>
+										-Xmx128m
+										--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+										--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.command=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.cursor=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.data=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.icon=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.math=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.tool=ALL-UNNAMED
+										--add-opens=com.avereon.cartesia/com.avereon.cartesia.tool.view=ALL-UNNAMED
+									</argLine>
+									<systemPropertyVariables>
+										<!-- Set testfx.setup.timeout to a reasonable time -->
+										<!-- This might be as low as 1000 for a fast computer -->
+										<!-- This might be as high as 5000 for a slow computer -->
+										<testfx.setup.timeout>5000</testfx.setup.timeout>
+										<!-- Set testfx.headless to true to run FX tests in headless mode -->
+										<testfx.headless>true</testfx.headless>
+										<!-- Set testfx.robot to glass when running tests in headless mode -->
+										<testfx.robot>glass</testfx.robot>
+										<!-- Set prism.order to sw when running tests in headless mode -->
+										<!-- https://wiki.openjdk.java.net/display/OpenJFX/Monocle -->
+										<prism.order>sw</prism.order>
+										<!-- Not sure what this setting does but it's in all the examples found -->
+										<prism.text>t2k</prism.text>
+										<!-- Set java.awt.headless to true when running tests in headless mode -->
+										<java.awt.headless>true</java.awt.headless>
+									</systemPropertyVariables>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
 		<profile>
 			<id>packs</id>
 			<build>
